--- a/todoapp/src/main/resources/application.properties
+++ b/todoapp/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=todoapp
 
 spring.datasource.url = jdbc:mysql://localhost:3306/todo-app
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.username = ****
+spring.datasource.password = ****
 
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
